Refactor: UserRepository